# pong_term

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  test_60fps_conditional.sh  test_all.sh  test_alternate_screen.sh  test_ball_physics.sh  test_input_responsiveness.sh  test_no_echo.sh  test_scroll_fix.sh
.github/workflows/: ci.yml  release.yml
src/: draw.rs  framebuffer.rs  game_loop.rs  game_session.rs  input.rs  lib.rs  main.rs  model.rs  render.rs  terminal.rs  util.rs
